--- a/NOTINEWS - SERVER/package.json
+++ b/NOTINEWS - SERVER/package.json
@@ -14,5 +14,11 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.21.2"
+  },
+  "devDependencies": {
+    "eslint": "^9.17.0",
+    "morgan": "^1.10.0",
+    "nodemon": "^3.1.9",
+    "prettier": "^3.4.2"
   }
 }
