--- a/NOTINEWS - SERVER/package.json
+++ b/NOTINEWS - SERVER/package.json
@@ -1,24 +1,28 @@
 {
-  "name": "notinews---server",
-  "version": "1.0.0",
-  "description": "Servidor de un gestor de noticias basado en el uso de Express",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "repository": {
-    "type": "git",
-    "url": "github.com/solccast/noti-new"
-  },
-  "author": "Sol Angela Chilaca Castro [solccastro@gmail.com]",
-  "license": "ISC",
-  "dependencies": {
-    "express": "^4.21.2"
-  },
-  "devDependencies": {
-    "eslint": "^9.17.0",
-    "morgan": "^1.10.0",
-    "nodemon": "^3.1.9",
-    "prettier": "^3.4.2"
-  }
+	"name": "notinews---server",
+	"version": "1.0.0",
+	"description": "Servidor de un gestor de noticias basado en el uso de Express",
+	"main": "index.js",
+	"scripts": {
+		"start": "nodemon bin/www",
+		"seed": "node bin/seed.js",
+		"format": "prettier --write .",
+		"check-format": "prettier --check ."
+	},
+	"repository": {
+		"type": "git",
+		"url": "github.com/solccast/noti-new"
+	},
+	"author": "Sol Angela Chilaca Castro [solccastro@gmail.com]",
+	"license": "ISC",
+	"dependencies": {
+		"body-parser": "^1.20.3",
+		"express": "^4.21.2"
+	},
+	"devDependencies": {
+		"eslint": "^9.17.0",
+		"morgan": "^1.10.0",
+		"nodemon": "^3.1.9",
+		"prettier": "3.4.2"
+	}
 }
